--- a/messages/2.2.0.md
+++ b/messages/2.2.0.md
@@ -2,4 +2,4 @@
 
 ## New
 
-- User hover events for holiday popups instead of selection events (if on a late enough Sublime version).
+- User hover events for holiday popups instead of selection events (Sublime version 3116+).
